--- a/frontend/css/styleExams.css
+++ b/frontend/css/styleExams.css
@@ -76,8 +76,8 @@ div.container-fluid i {
 }
 
 
-
 /* start intro */
+
 
 div.intro {
     margin-top: 40px;
@@ -165,6 +165,10 @@ div.createExam .globalExamInformations  {
 
 div.createExam .globalExamInformations > div {
     flex-basis: 45%;
+}
+
+form.examForm select {
+    margin-bottom: 20px;
 }
 
 
