--- a/css/style2.css
+++ b/css/style2.css
@@ -1,5 +1,6 @@
 body {
     font-family: sans-serif;
+    height: 100vh;
 }
 /* start global values */
 * {
@@ -11,12 +12,14 @@ body {
 html {
     scroll-behavior: smooth;
 }
+
 ul {
     list-style: none;
     position: relative;
     margin-top: 15px;
     margin-bottom: 15px;
 }
+
 .header ul li {
     display: inline;
     padding-left: 15px;
@@ -25,7 +28,19 @@ ul {
     font-size: 1.2rem;
     font-weight: bold;
 }
-@media (max-width:530px) {
+
+
+.header ul li a {
+    color: white;
+}
+
+.header ul li i {
+    color: white;
+}
+
+
+
+@media (max-width:530px){
     ul li:last-child {
         display: none;
     } 
@@ -33,48 +48,64 @@ ul {
         padding-right: 25px;
     }
     ul li {
-        font-size: 1rem;
+        font-size: 1rem ;
     }
 }
-.header ul li:last-child {
+
+.header ul li:last-child{
     padding-right: 25px;
 }
-.header li:last-child i {
-    border-left: 3px solid black;
+
+.header  li:last-child i {
+    border-left: 3px solid rgb(255, 255, 255);
     padding-left: 15px;
 }
+
 ul li a:hover {
     color: dodgerblue;
 }
+
 a {
     text-decoration: none;
     color: black;
 }
+
 /* start header */
+
+
+
 .header {
     position: relative;
     z-index: 1000;
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(255, 255, 255, 0);
     display: flex;
     justify-content: space-between;
     align-items: center;
     text-transform: capitalize;
+    height:120px;
 }
+
 .header .logo img {
     max-width: 100%;
     width: 140px;
 }
+
 .header .logo {
     display: flex;
     align-items: center;
 }
+
 .header .logo h1 {
     text-shadow: 2px 2px 1px rgb(54, 52, 52);
+    color: white;
 }
-@media (max-width:913px) {
-    .header {
+
+
+@media (max-width:970px) {
+    .header  {
         justify-content: center;
         flex-direction: column;
+        height: 150px;
     }
     .header .nav {
         margin: 0 auto;
@@ -82,10 +113,13 @@ a {
     .header .logo img {
         margin-inline-start: -40px;
     }
+
     .header ul li a {
         font-size: 0.9rem;
     }
 }
+
+
 @media (max-width:408px) {
     .header ul li a {
         font-size: 0.75rem;
@@ -93,23 +127,32 @@ a {
     .header .logo h1 {
         font-size: 1.5rem;
     }
-    .header .logo img {
+    .header .logo img  {
         width: 100px;
     }
 }
 /* end header */
 /* start landing */
 .landing {
-    min-height: calc(100vh - 140px);
+    min-height: calc(100vh + 120px);
     background-image: url("../photos/landing3.jpg");
     background-position: center;
     background-repeat: no-repeat;
+    background-size: cover;
     position: relative;
     transition: .8s;
     display: flex;
     justify-content: center;
     align-items: center;
+    top: -120px;
 }
+
+@media (max-width:970px) {
+    .landing {
+        top: -150px;
+    }
+}
+
 .landing::before {
     content: "";
     position: absolute;
@@ -157,6 +200,7 @@ form input.submit {
 }
 #newAccountForm {
     display: none;
+    margin-top: 50px;
 }
 #loginSection {
     position: absolute;
@@ -166,11 +210,10 @@ form input.submit {
     background-color: rgba(255, 255, 255, 0.6);
     padding: 30px;
     border-radius: 5px;
-    /* width: 80%; */
-    /* max-width: 800px; */
     max-width: 100%;
     width: 1300px;
     padding: 60px;
+    margin-top: 50px;
 }
 .left-text {
     flex: 1;
